src/test/deca/context/valid/homemade/test/test337_type_op_unaire1.deca
// test valide de la règle 3.37


{
    int i;
    float f;
    boolean b;

    i = - 7;
    f = - 7.5;
    f = - - 5;
    f = - - - - - 0.2;

    b = !true;
    b = !false;
    b = !!!false;

}