src/test/deca/context/invalid/homemade/tests/test333_type_op_binaire/test333_type_op_binaire23.deca
// test invalide de la règle 3.33


{
    0.2 == false;
}
